--- a/EMRMS.csproj
+++ b/EMRMS.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <None Remove="DialogWindows.xaml" />
     <None Remove="RegisterWindow.xaml" />
+    <None Remove="Users\SampleUser.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -48,6 +49,24 @@
   </ItemGroup>
   <ItemGroup>
     <Page Update="RegisterWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Properties\Lang.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Lang.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Lang.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Lang.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Users\SampleUser.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
