--- a/App.config
+++ b/App.config
@@ -2,5 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="Language" value="es-ES" />
+		<add key="DefaultConnection" value="Server=localhost;Port=3306;Database=BDTESTING;Uid=root;Pwd=root;"/>
 	</appSettings>
 </configuration>
